# braindead

./: .env.example  .gitignore  README.md  alias.nu  config.yml.example  docker-compose.yml  flake.nix  pyproject.toml
brainless/: __main__.py  ai.py  article.py  config.py  handlers.py  youtube.py
brainless/services/: youtube.py
prompts/: convert_to_markdown.md  sec_summary.md  summarize_highlight.md  summarize_resource.md
schemas/: config.schema.json
src/braindead/: __main__.py  ai.py  config.py  models.py
src/braindead/prompts/: summarize_story.md
src/braindead/resources/: kindle.py  youtube.py
src/braindead/utils/: __init__.py  logger.py
src/brainless/: __main__.py  ai.py  config.py  handlers.py
src/brainless/prompts/: convert_to_markdown.md  ctbb_summary.md  highlight.md
src/brainless/read/: kindle.py
