[project]
name = "braindead"
version = "0.1.0"
description = "Because AI may turn me dumb."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "google-api-python-client>=2.187.0",
    "litellm>=1.75.0",
    "lxml[html-clean]>=6.0.0",
    "markdownify>=1.1.0",
    "mongoengine>=0.29.1",
    "newspaper3k>=0.2.8",
    "ollama>=0.5.2",
    "openai>=1.99.1",
    "pydantic>=2.11.7",
    "pymongo>=4.13.2",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "youtube-transcript-api>=1.2.2",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "datamodel-code-generator>=0.34.0"]

[project.scripts]
braindead = "braindead.__main__:main"
